--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GYMSTER - Gym HTML Template</title>
+    <title>Ginuh Games</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -89,7 +89,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <!-- <a href="class.html" class="nav-item nav-link">Classes</a> -->
-                            <a href="team.html" class="nav-item nav-link active">Trainers</a>
+                            <a href="team.html" class="nav-item nav-link active">Team</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
@@ -110,7 +110,7 @@
 
 
     <!-- Hero Start -->
-    <div class="container-fluid bg-primary p-5 bg-hero mb-5">
+    <!-- <div class="container-fluid bg-primary p-5 bg-hero mb-5">
         <div class="row py-5">
             <div class="col-12 text-center">
                 <h1 class="display-2 text-uppercase text-white mb-md-4">Trainers</h1>
@@ -118,7 +118,7 @@
                 <a href="" class="btn btn-light py-md-3 px-md-5">Trainers</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Hero End -->
 
 
@@ -126,114 +126,60 @@
     <div class="container-fluid p-5">
         <div class="mb-5 text-center">
             <h5 class="text-primary text-uppercase">The Team</h5>
-            <h1 class="display-3 text-uppercase mb-0">Expert Trainers</h1>
+            <h1 class="display-3 text-uppercase mb-0">Developers</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="team-item position-relative">
                     <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/DavidPhoto.jpeg" alt="">
                         <div class="team-overlay">
                             <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://x.com/__vozes__?s=11&t=XzN3kPcC_wzzac92sY1L9A"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://www.instagram.com/boces16?igsh=MTd1NWF2cnl0MnNycQ%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://www.linkedin.com/in/david-boces-obis-474196238?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="position-absolute start-0 bottom-0 w-100 rounded-bottom text-center p-4" style="background: rgba(34, 36, 41, .9);">
-                        <h5 class="text-uppercase text-light">John Deo</h5>
-                        <p class="text-uppercase text-secondary m-0">Trainer</p>
+                        <h5 class="text-uppercase text-light">David Boces</h5>
+                        <p class="text-uppercase text-secondary m-0">Game Designer / Coder</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="team-item position-relative">
                     <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/FotoErik.jpg" alt="">
                         <div class="team-overlay">
                             <div class="d-flex align-items-center justify-content-start">
                                 <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://www.instagram.com/eriik1212?igsh=d2VkYnI1ZXUxYjR2"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://www.linkedin.com/in/erikmartingarzon?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="position-absolute start-0 bottom-0 w-100 rounded-bottom text-center p-4" style="background: rgba(34, 36, 41, .9);">
-                        <h5 class="text-uppercase text-light">James Taylor</h5>
-                        <p class="text-uppercase text-secondary m-0">Trainer</p>
+                        <h5 class="text-uppercase text-light">Erik Martín</h5>
+                        <p class="text-uppercase text-secondary m-0">Game Designer / Audio Designer</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="team-item position-relative">
                     <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/FotoJuande.jpg" alt="">
                         <div class="team-overlay">
                             <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://x.com/jedtraa?s=11&t=XzN3kPcC_wzzac92sY1L9A"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://www.instagram.com/juandediosgasa?igsh=Zm0zYXF5cGEwZ3Rp"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-light btn-square rounded-circle mx-1" href="https://www.linkedin.com/in/juan-de-dios-garc%C3%ADa-salguero-689087225?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="position-absolute start-0 bottom-0 w-100 rounded-bottom text-center p-4" style="background: rgba(34, 36, 41, .9);">
-                        <h5 class="text-uppercase text-light">Adam Phillips</h5>
-                        <p class="text-uppercase text-secondary m-0">Trainer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="team-item position-relative">
-                    <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="position-absolute start-0 bottom-0 w-100 rounded-bottom text-center p-4" style="background: rgba(34, 36, 41, .9);">
-                        <h5 class="text-uppercase text-light">John Deo</h5>
-                        <p class="text-uppercase text-secondary m-0">Trainer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="team-item position-relative">
-                    <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="position-absolute start-0 bottom-0 w-100 rounded-bottom text-center p-4" style="background: rgba(34, 36, 41, .9);">
-                        <h5 class="text-uppercase text-light">James Taylor</h5>
-                        <p class="text-uppercase text-secondary m-0">Trainer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="team-item position-relative">
-                    <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                        <div class="team-overlay">
-                            <div class="d-flex align-items-center justify-content-start">
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="position-absolute start-0 bottom-0 w-100 rounded-bottom text-center p-4" style="background: rgba(34, 36, 41, .9);">
-                        <h5 class="text-uppercase text-light">Adam Phillips</h5>
-                        <p class="text-uppercase text-secondary m-0">Trainer</p>
+                        <h5 class="text-uppercase text-light">Juan de Dios García</h5>
+                        <p class="text-uppercase text-secondary m-0">Environment Artist / 3D Prop Artist</p>
                     </div>
                 </div>
             </div>
@@ -294,6 +240,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-5">
+                    <img class="position-absolute w-25 h-25 rounded" src="img/CaraGinuhBlanca-02.png" style="object-fit: contain;">
                     <!-- <h4 class="text-uppercase text-white mb-4">Newsletter</h4>
                     <h6 class="text-uppercase text-white">Subscribe Our Newsletter</h6>
                     <p class="text-light">Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
