--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GYMSTER - Gym HTML Template</title>
+    <title>Ginuh Games</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -89,7 +89,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link active">About</a>
                             <!-- <a href="class.html" class="nav-item nav-link">Classes</a> -->
-                            <a href="team.html" class="nav-item nav-link">Trainers</a>
+                            <a href="team.html" class="nav-item nav-link">Team</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
@@ -110,7 +110,7 @@
 
 
     <!-- Hero Start -->
-    <div class="container-fluid bg-primary p-5 bg-hero mb-5">
+    <!-- <div class="container-fluid bg-primary p-5 bg-hero mb-5">
         <div class="row py-5">
             <div class="col-12 text-center">
                 <h1 class="display-2 text-uppercase text-white mb-md-4">About Us</h1>
@@ -118,7 +118,7 @@
                 <a href="" class="btn btn-light py-md-3 px-md-5">About</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Hero End -->
 
 
@@ -127,31 +127,31 @@
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 rounded" src="img/GinuhTeam.jpeg" style="object-fit: cover;">
                 </div>
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
                     <h5 class="text-primary text-uppercase">About Us</h5>
-                    <h1 class="display-3 text-uppercase mb-0">Welcome to Gymster</h1>
+                    <h1 class="display-3 text-uppercase mb-0">Ginuh Games</h1>
                 </div>
-                <h4 class="text-body mb-4">Diam dolor diam ipsum tempor sit. Clita erat ipsum et lorem stet no labore lorem sit clita duo justo magna dolore</h4>
-                <p class="mb-4">Nonumy erat diam duo labore clita. Sit magna ipsum dolor sed ea duo at ut. Tempor sit lorem sit magna ipsum duo. Sit eos dolor ut sea rebum, diam sea rebum lorem kasd ut ipsum dolor est ipsum. Et stet amet justo amet clita erat, ipsum sed at ipsum eirmod labore lorem.</p>
+                <h4 class="text-body mb-4">A little video game studio where imagination becomes play</h4>
+                <p class="mb-4">Willing to leave a stepmark in the video game industry. Game design and narrative lovers, blended with some good environment art to make games feel unique. </p>
                 <div class="rounded bg-dark p-5">
                     <ul class="nav nav-pills justify-content-between mb-3">
                         <li class="nav-item w-50">
                             <a class="nav-link text-uppercase text-center w-100 active" data-bs-toggle="pill" href="#pills-1">About Us</a>
                         </li>
                         <li class="nav-item w-50">
-                                <a class="nav-link text-uppercase text-center w-100" data-bs-toggle="pill" href="#pills-2">Why Choose Us</a>
+                                <a class="nav-link text-uppercase text-center w-100" data-bs-toggle="pill" href="#pills-2">Why "Ginuh Games"</a>
                         </li>
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="pills-1">
-                            <p class="text-secondary mb-0">Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna</p>
+                            <p class="text-secondary mb-0">We are three friends that love making games together. Always looking beyond and trying to impact on the player with a great storytelling. We think a good game design is the key for a good video game, and we always try to reach the standards.</p>
                         </div>
                         <div class="tab-pane fade" id="pills-2">
-                            <p class="text-secondary mb-0">Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna</p>
+                            <p class="text-secondary mb-0">On the first year of university we had to group ourselves and choose a name. "Guineu" is fox in catalan, and this adventurer and agile animal fascinated us from the beginning. We wanted to name our group after this precious animal. Since then, we have been "Ginuh Games".</p>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
 
 
     <!-- Programe Start -->
-    <div class="container-fluid programe position-relative px-5 mt-5" style="margin-bottom: 180px;">
+    <!-- <div class="container-fluid programe position-relative px-5 mt-5" style="margin-bottom: 180px;">
         <div class="row g-5 gb-5">
             <div class="col-lg-4 col-md-6">
                 <div class="bg-light rounded text-center p-5">
@@ -193,12 +193,12 @@
                 <a href="" class="btn btn-primary py-3 px-5">Become A Member</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Programe Start -->
 
 
     <!-- Facts Start -->
-    <div class="container-fluid bg-dark facts p-5" style="margin-bottom: 90px;">
+    <!-- <div class="container-fluid bg-dark facts p-5" style="margin-bottom: 90px;">
         <div class="row gx-5 gy-4 py-5">
             <div class="col-lg-3 col-md-6">
                 <div class="d-flex">
@@ -245,7 +245,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Facts End -->
     
 
@@ -301,6 +301,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-5">
+                    <img class="position-absolute w-25 h-25 rounded" src="img/CaraGinuhBlanca-02.png" style="object-fit: contain;">
                     <!-- <h4 class="text-uppercase text-white mb-4">Newsletter</h4>
                     <h6 class="text-uppercase text-white">Subscribe Our Newsletter</h6>
                     <p class="text-light">Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
