--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GYMSTER - Gym HTML Template</title>
+    <title>Ginuh Games</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -89,7 +89,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <!-- <a href="class.html" class="nav-item nav-link">Classes</a> -->
-                            <a href="team.html" class="nav-item nav-link">Trainers</a>
+                            <a href="team.html" class="nav-item nav-link">Team</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
@@ -110,7 +110,7 @@
 
 
     <!-- Hero Start -->
-    <div class="container-fluid bg-primary p-5 bg-hero mb-5">
+    <!-- <div class="container-fluid bg-primary p-5 bg-hero mb-5">
         <div class="row py-5">
             <div class="col-12 text-center">
                 <h1 class="display-2 text-uppercase text-white mb-md-4">Contact</h1>
@@ -118,7 +118,7 @@
                 <a href="" class="btn btn-light py-md-3 px-md-5">Contact</a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Hero End -->
 
 
@@ -135,7 +135,7 @@
                         <i class="fa fa-map-marker-alt fs-4 text-white"></i>
                     </div>
                     <h5 class="text-uppercase text-primary">Visit Us</h5>
-                    <p class="text-secondary mb-0">123 Street, New York, USA</p>
+                    <p class="text-secondary mb-0">Barcelona</p>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -144,7 +144,7 @@
                         <i class="fa fa-envelope fs-4 text-white"></i>
                     </div>
                     <h5 class="text-uppercase text-primary">Email Us</h5>
-                    <p class="text-secondary mb-0">info@example.com</p>
+                    <p class="text-secondary mb-0">ginuhgames@gmail.com</p>
                 </div>
             </div>
             <div class="col-lg-4">
@@ -153,11 +153,11 @@
                         <i class="fa fa-phone fs-4 text-white"></i>
                     </div>
                     <h5 class="text-uppercase text-primary">Call Us</h5>
-                    <p class="text-secondary mb-0">+012 345 6789</p>
+                    <p class="text-secondary mb-0">+34 672 13 98 16</p>
                 </div>
             </div>
         </div>
-        <div class="row g-0">
+        <!-- <div class="row g-0">
             <div class="col-lg-6">
                 <div class="bg-dark p-5">
                     <form>
@@ -187,7 +187,7 @@
                     frameborder="0" style="height: 457px; border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- Contact End -->
 
@@ -244,6 +244,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-5">
+                    <img class="position-absolute w-25 h-25 rounded" src="img/CaraGinuhBlanca-02.png" style="object-fit: contain;">
                     <!-- <h4 class="text-uppercase text-white mb-4">Newsletter</h4>
                     <h6 class="text-uppercase text-white">Subscribe Our Newsletter</h6>
                     <p class="text-light">Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
