--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GYMSTER - Gym HTML Template</title>
+    <title>Ginuh Games</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -89,7 +89,7 @@
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <!-- <a href="class.html" class="nav-item nav-link">Classes</a> -->
-                            <a href="team.html" class="nav-item nav-link">Trainers</a>
+                            <a href="team.html" class="nav-item nav-link">Team</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
@@ -100,7 +100,7 @@
                             </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our newest lunch!</a>
+                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our latest lunch!</a>
                     </div>
                 </nav>
             </div>
@@ -951,6 +951,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-5">
+                    <img class="position-absolute w-25 h-25 rounded" src="img/CaraGinuhBlanca-02.png" style="object-fit: contain;">
                     <!-- <h4 class="text-uppercase text-white mb-4">Newsletter</h4>
                     <h6 class="text-uppercase text-white">Subscribe Our Newsletter</h6>
                     <p class="text-light">Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
