--- a/team.html
+++ b/team.html
@@ -150,7 +150,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="team-item position-relative">
                     <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/FotoErik.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/FotoErik.jpeg" alt="">
                         <div class="team-overlay">
                             <div class="d-flex align-items-center justify-content-start">
                                 <a class="btn btn-light btn-square rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
