--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                             <a class="btn btn-light btn-square rounded-circle" href="https://www.youtube.com/@ginuhgames?sub_confirmation=1">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/evKX7thd">
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
                                 <i class="fab fa-discord"></i>
                            </a>
                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.tiktok.com/@ginuhgames">
