--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                             </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our newest lunch!</a>
+                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our newest launch!</a>
                     </div>
                 </nav>
             </div>
