--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our latest lunch!</a>
+                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our latest launch!</a>
                     </div>
                 </nav>
             </div>
