--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="team-item position-relative">
                     <div class="position-relative overflow-hidden rounded">
-                        <img class="img-fluid w-100" src="img/FotoJuande.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/JuandePhoto.jpeg" alt="">
                         <div class="team-overlay">
                             <div class="d-flex align-items-center justify-content-start">
                                 <a class="btn btn-light btn-square rounded-circle mx-1" href="https://x.com/jedtraa?s=11&t=XzN3kPcC_wzzac92sY1L9A"><i class="fab fa-twitter"></i></a>
