--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
                     </div>
                     <div class="col-lg-5 px-5 text-end">
                         <div class="d-inline-flex align-items-center py-2">
-                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://ginuhgames.itch.io/unlighted-demo">
-                                <i class="fab fa-itch-io"></i>
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://store.steampowered.com/app/3051520/Unlighted/">
+                                <i class="fab fa-steam"></i>
                             </a>
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://x.com/GinuhGames">
                                 <i class="fab fa-twitter"></i>
@@ -100,7 +100,7 @@
                             </div> -->
                             <a href="contact.html" class="nav-item nav-link active">Contact</a>
                         </div>
-                        <a href="https://ginuhgames.itch.io/unlighted-demo" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Try our newest launch!</a>
+                        <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Add Unlighted to your Wishlist <3</a>
                     </div>
                 </nav>
             </div>
