--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <h5 class="text-white text-uppercase">Now on Steam!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
                             <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 me-3">Try it now!</a>
-                            <a href="https://discord.gg/evKX7thd" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
+                            <a href="https://discord.gg/TK8JChDWC8" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
                 </div>
