--- a/team.html
+++ b/team.html
@@ -56,24 +56,27 @@
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://store.steampowered.com/app/3051520/Unlighted/">
                                 <i class="fab fa-steam"></i>
                             </a>
-                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://x.com/GinuhGames">
-                                <i class="fab fa-twitter"></i>
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch">
+                                <i class="fab fa-kickstarter"></i>
+                            </a>
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
+                                <i class="fab fa-discord"></i>
                             </a>
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://x.com/GinuhGames">
+                                <i class="fab fa-twitter"></i>
+                            </a>
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.instagram.com/ginuhgames">
                                 <i class="fab fa-instagram"></i>
+                            </a>
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.tiktok.com/@ginuhgames">
+                                <i class="fab fa-tiktok"></i>
                             </a>
                             <a class="btn btn-light btn-square rounded-circle" href="https://www.youtube.com/@ginuhgames?sub_confirmation=1">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
-                                <i class="fab fa-discord"></i>
-                           </a>
-                           <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.tiktok.com/@ginuhgames">
-                            <i class="fab fa-tiktok"></i>
-                       </a>
                         </div>
                     </div>
                 </div>
@@ -208,10 +211,30 @@
                             <p class="mb-0">+34 672 13 98 16</p>
                         </div>
                         <div class="d-flex mt-4">
-                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://x.com/GinuhGames"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.instagram.com/ginuhgames"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-primary btn-square rounded-circle" href="https://ginuhgames.itch.io/unlighted-demo"><i class="fab fa-itch-io"></i></a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://store.steampowered.com/app/3051520/Unlighted/">
+                                <i class="fab fa-steam"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch">
+                                <i class="fab fa-kickstarter"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
+                                <i class="fab fa-discord"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://x.com/GinuhGames">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.instagram.com/ginuhgames">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.tiktok.com/@ginuhgames">
+                                <i class="fab fa-tiktok"></i>
+                            </a>
+                            <a class="btn btn-primary btn-square rounded-circle" href="https://www.youtube.com/@ginuhgames?sub_confirmation=1">
+                                <i class="fab fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
