--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                     <img class="w-100" src="img/UnlightedKickComingSoon.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase">Coming Soon in Kickstarter!</h5>
+                            <h5 class="text-white text-uppercase">NOW in Kickstarter!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
-                            <a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Get notified when campaign begins!</a>
+                            <a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Help us NOW and get some rewards!</a>
                             <a href="https://discord.gg/TK8JChDWC8" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
