--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/UnlightedKickComingSoon.jpg" alt="Image">
+                    <img class="w-100" src="img/JustLaunchedKick.jpeg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">NOW in Kickstarter!</h5>
