--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
     </div>
     <!-- Carousel End -->
 
+        <!-- Kickstarter Start -->
+    <div style="text-align: center;">
+<iframe width="800" height="500" src="https://www.kickstarter.com/projects/ginuhgames/unlighted/widget/video.html" frameborder="0" scrolling="no"> </iframe>
+    
+<iframe src="https://www.kickstarter.com/projects/ginuhgames/unlighted/widget/card.html?v=2" width="420" height="500" frameborder="0" scrolling="no"></iframe>
+    </div>
+    <!-- Kickstarter End -->
 
     <!-- Unlighted Start -->
     <div class="container-fluid p-5">
