--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/JustLaunchedKick.jpeg" alt="Image">
+                    <img class="w-100" src="img/JutsFunded.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase">NOW in Kickstarter!</h5>
+                            <h5 class="text-white text-uppercase">Thank you all! We completed our goal in Kickstarter!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
-                            <a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Help us NOW and get some rewards!</a>
+                            <a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Your rewards will be there soon...</a>
                             <a href="https://discord.gg/TK8JChDWC8" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Now on Steam!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
-                            <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 me-3">Try it now!</a>
+                            <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Try it now!</a>
                             <a href="https://discord.gg/TK8JChDWC8" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                 <h4 class="text-body mb-4">Will you be the ultimate test subject?</h4>
                 <p class="mb-4">If you decide to undertake this long and hard trip with us you will discover a great secret hidden from humanity, so everything you see here is totally confidential. Therefore we ask for complete discretion, if you manage to get out, of course.</p>
                 <!-- <iframe frameborder="0" src="https://itch.io/embed/2684920?linkback=true&amp;bg_color=1b1b1b&amp;fg_color=ffffff&amp;link_color=fe6417&amp;border_color=485071" width="552" height="167"><a href="https://ginuhgames.itch.io/unlighted-demo">Unlighted - Demo by GinuhGames</a></iframe> -->
-                <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 me-3">Wishlist on Steam</a>
+                <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Wishlist on Steam</a>
                 <p class="mb-4"> </p>
                 <div class="rounded bg-dark p-5">
                     <ul class="nav nav-pills justify-content-between mb-3">
