Discord Link Updated

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch">
                                 <i class="fab fa-kickstarter"></i>
                             </a>
-                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/gKbK4HBPng">
                                 <i class="fab fa-discord"></i>
                             </a>
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true">
@@ -221,7 +221,7 @@
                             <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch">
                                 <i class="fab fa-kickstarter"></i>
                             </a>
-                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://discord.gg/gKbK4HBPng">
                                 <i class="fab fa-discord"></i>
                             </a>
                             <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true">
