--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch">
                                 <i class="fab fa-kickstarter"></i>
                             </a>
-                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
+                            <a class="btn btn-light btn-square rounded-circle me-2" href="https://discord.gg/gKbK4HBPng">
                                 <i class="fab fa-discord"></i>
                             </a>
                             <a class="btn btn-light btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true">
@@ -128,7 +128,7 @@
                             <h5 class="text-white text-uppercase">Thank you all! We completed our goal in Kickstarter!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
                             <a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Your rewards will be there soon...</a>
-                            <a href="https://discord.gg/TK8JChDWC8" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
+                            <a href="https://discord.gg/gKbK4HBPng" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                             <h5 class="text-white text-uppercase">Now on Steam!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
                             <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Try it now!</a>
-                            <a href="https://discord.gg/TK8JChDWC8" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
+                            <a href="https://discord.gg/gKbK4HBPng" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
                 </div>
@@ -983,7 +983,7 @@
                             <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch">
                                 <i class="fab fa-kickstarter"></i>
                             </a>
-                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://discord.gg/TK8JChDWC8">
+                            <a class="btn btn-primary btn-square rounded-circle me-2" href="https://discord.gg/gKbK4HBPng">
                                 <i class="fab fa-discord"></i>
                             </a>
                             <a class="btn btn-primary btn-square rounded-circle me-2" href="https://www.linkedin.com/company/ginuhgames/?viewAsMember=true">
