Web Update After Lunch

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                             </div> -->
                             <a href="contact.html" class="nav-item nav-link active">Contact</a>
                         </div>
-                        <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Add Unlighted to your Wishlist <3</a>
+                        <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Play Unlighted <3</a>
                     </div>
                 </nav>
             </div>
