--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                        <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Add Unlighted to your Wishlist <3</a>
+                        <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 d-none d-lg-block">Play Unlighted <3</a>
                     </div>
                 </nav>
             </div>
@@ -127,18 +127,19 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Thank you all! We completed our goal in Kickstarter!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
-                            <a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Your rewards will be there soon...</a>
-                            <a href="https://discord.gg/gKbK4HBPng" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
+                            <!--<a href="https://www.kickstarter.com/projects/ginuhgames/unlighted?ref=clipboard-prelaunch" class="btn btn-primary py-md-3 px-md-5 me-3">Your rewards will be there soon...</a>-->
+                            <a href="https://discord.gg/gKbK4HBPng" class="btn btn-primary py-md-3 px-md-5 me-3">Join our Discord Server</a>
+                            <!--<a href="https://discord.gg/gKbK4HBPng" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>-->
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/SteamWishlist.jpg" alt="Image">
+                    <img class="w-100" src="img/FondoPaginWebSteam.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Now on Steam!</h5>
                             <h1 class="display-2 text-white text-uppercase mb-md-4">Unlighted</h1>
-                            <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Try it now!</a>
+                            <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Try the free demo now!</a>
                             <a href="https://discord.gg/gKbK4HBPng" class="btn btn-light py-md-3 px-md-5">Join our Discord Server</a>
                         </div>
                     </div>
@@ -211,18 +212,18 @@
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded" src="img/Umbralita.png" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 rounded" src="img/UnlightedScreenshot_2.jpg" style="object-fit: cover;">
                 </div>
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
                     <h5 class="text-primary text-uppercase">Video Game</h5>
-                    <h1 class="display-3 text-uppercase mb-0">Unlighted - Demo</h1>
+                    <h1 class="display-3 text-uppercase mb-0">Unlighted</h1>
                 </div>
                 <h4 class="text-body mb-4">Will you be the ultimate test subject?</h4>
                 <p class="mb-4">If you decide to undertake this long and hard trip with us you will discover a great secret hidden from humanity, so everything you see here is totally confidential. Therefore we ask for complete discretion, if you manage to get out, of course.</p>
                 <!-- <iframe frameborder="0" src="https://itch.io/embed/2684920?linkback=true&amp;bg_color=1b1b1b&amp;fg_color=ffffff&amp;link_color=fe6417&amp;border_color=485071" width="552" height="167"><a href="https://ginuhgames.itch.io/unlighted-demo">Unlighted - Demo by GinuhGames</a></iframe> -->
-                <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Wishlist on Steam</a>
+                <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Try the free demo on Steam</a>
                 <p class="mb-4"> </p>
                 <div class="rounded bg-dark p-5">
                     <ul class="nav nav-pills justify-content-between mb-3">
@@ -235,7 +236,9 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane fade show active" id="pills-1">
-                            <p class="text-secondary mb-0">Unlighted is a First Person Puzzle video game where you will have to overcome multiple tests and discover the eerie truth sorrounding the world. With the help of the light (and the abscence of it) you will discover the secrets around Umbral Alchemy, the group that is experimenting with your life.</p>
+                            <p class="text-secondary mb-0">Unlighted is a first-person puzzle video game where you enter a dystopian world that
+reflects the threshold between memory and oblivion, where you experiment with
+some invisible materials that materialize when hitted by a ray of light.</p>
                         </div>
                         <div class="tab-pane fade" id="pills-2">
                             <p class="text-secondary mb-0">Use the light and all the devices that Umbral Alchemy puts in your disposal to overcome all the tests and know the truth. Scan the Umbralita to know their location and light it up to objectify it.</p>
