--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
                 <p class="mb-4">If you decide to undertake this long and hard trip with us you will discover a great secret hidden from humanity, so everything you see here is totally confidential. Therefore we ask for complete discretion, if you manage to get out, of course.</p>
                 <!-- <iframe frameborder="0" src="https://itch.io/embed/2684920?linkback=true&amp;bg_color=1b1b1b&amp;fg_color=ffffff&amp;link_color=fe6417&amp;border_color=485071" width="552" height="167"><a href="https://ginuhgames.itch.io/unlighted-demo">Unlighted - Demo by GinuhGames</a></iframe> -->
                 <a href="https://store.steampowered.com/app/3051540/Unlighted_Demo/" class="btn btn-primary py-md-3 px-md-5 me-3">Try the free demo on Steam</a>
+                <a href="https://store.steampowered.com/app/3051520/Unlighted/" class="btn btn-primary py-md-3 px-md-5 me-3">Get Unlighted!</a>
+                <a href="https://open.spotify.com/intl-es/album/2Ke1FSp1KWR8q8WFX9wmQR?si=Dpc9TI1qQe-ktRgpAb4ApQ" class="btn btn-primary py-md-3 px-md-5 me-3">OST - SPOTIFY</a>
                 <p class="mb-4"> </p>
                 <div class="rounded bg-dark p-5">
                     <ul class="nav nav-pills justify-content-between mb-3">
